docker-compose.yml changed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     restart: always
     ports:
       - '3306:3306'
+    command: --innodb_use_native_aio=0
     volumes:
       - ./data:/var/lib/mysql
       - ./initDb:/docker-entrypoint-initdb.d
